# supreme-research-mcp

./: .env  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  rename_project.sh
akinus_utils/: __init__.py  app_details.py  logger.py  notify.py  update.py
akinus_utils/transform/: __init__.py
akinus_utils/transform/academic/: __init__.py  references.py
akinus_utils/transform/case/: __init__.py  camel.py  lower.py  screaming_snake.py  sentence.py  snake.py  title.py  upper.py  upper_snake.py
akinus_utils/transform/case/snake/: __init__.py  regular.py  screaming.py  upper.py
akinus_utils/transform/obfuscation/: __init__.py  decode.py  encode.py
data/: data.txt
resources/: .readme
supreme-research-mcp/: __main__.py
supreme_research_mcp/: __main__.py  ollama.py  record_research.py  search.py  tools.py
supreme_research_mcp/searches/: constants.py  extraction.py  run_arxiv.py  run_core.py  run_ddg.py  utils.py
supreme_research_mcp/tools/: deep_research.py
utils/: __init__.py  logger.py  notify.py  update.py
utils/ai/: __init__.py  ollama.py
utils/transform/academic/: references.py
utils/transform/case/: __init__.py  camel.py  lower.py  sentence.py  title.py  upper.py
utils/transform/case/snake/: regular.py  screaming.py  upper.py
utils/transform/obfuscation/: decode.py  encode.py
utils/web/: __init__.py
utils/web/search/: __init__.py  arxiv.py  brave.py  core.py  crossref.py  open_alex.py  openalex.py
utils/web/server/: __init__.py  mcp.py
uv_base/: __main__.py
web/: .readme  server.py
web_scraper/: __init__.py  __main__.py
web_scraper/searches/: __init__.py  run_brave.py  run_crossref.py  run_openalex.py
web_scraper/tools/: __init__.py  deep_research.py
